welcome.lessons.welcome.array.island.Island.scala.error
island:10: error: type mismatch;
 found   : Float
 required: Int
  return res
         ^